Update samconfig.toml con s3 propio

--- a/samconfig.toml
+++ b/samconfig.toml
@@ -3,7 +3,7 @@ version = 0.1
 [default.deploy]
 [default.deploy.parameters]
 stack_name = "todo-list-aws"
-s3_bucket = "aws-sam-cli-managed-default-samclisourcebucket-upt09go84tay"
+s3_bucket = "bucket-tarea1d"
 s3_prefix = "todo-list-aws"
 region = "us-east-1"
 capabilities = "CAPABILITY_IAM"
@@ -14,8 +14,8 @@ image_repositories = []
 [staging.deploy]
 [staging.deploy.parameters]
 stack_name = "todo-list-aws-staging"
-s3_bucket = ""
-s3_prefix = ""
+s3_bucket = "bucket-tarea1d"
+s3_prefix = "todo-list-aws"
 region = "us-east-1"
 capabilities = "CAPABILITY_IAM"
 parameter_overrides = "Stage=\"staging\""
@@ -26,8 +26,8 @@ resolve_s3 = true
 [production.deploy]
 [production.deploy.parameters]
 stack_name = "todo-list-aws-production"
-s3_bucket = ""
-s3_prefix = ""
+s3_bucket = "bucket-tarea1d"
+s3_prefix = "todo-list-aws"
 region = "us-east-1"
 capabilities = "CAPABILITY_IAM"
 parameter_overrides = "Stage=\"production\""
